[gd_scene format=3 uid="uid://eiys6e0nbydt"]

[ext_resource type="Script" uid="uid://2yywuxohw8wu" path="res://ScenesScripts/menus/options_menu.gd" id="1_g2gi5"]
[ext_resource type="Texture2D" uid="uid://c6trpbl7vd1a7" path="res://Art/UI/TITLE PANEL 2.png" id="2_g5snc"]
[ext_resource type="Texture2D" uid="uid://ccpdynpuvppjd" path="res://Art/UI/waxseal.png" id="3_4lldk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pwyjb"]

[node name="OptionsMenu" type="Control" unique_id=1491650988]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g2gi5")

[node name="BG" type="ColorRect" parent="." unique_id=1666855432]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 1, 1, 1)

[node name="Sprite2D" type="Sprite2D" parent="BG" unique_id=1764305410]
position = Vector2(576, 324)
scale = Vector2(2, 1.3)
texture = ExtResource("2_g5snc")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1046138024]
modulate = Color(1, 1, 1, 0.67058825)
material = SubResource("ShaderMaterial_pwyjb")
layout_mode = 0
offset_left = 283.0
offset_top = 127.0
offset_right = 870.0
offset_bottom = 543.0

[node name="Title" type="RichTextLabel" parent="." unique_id=1318395873]
layout_mode = 0
offset_left = 472.0
offset_top = 138.0
offset_right = 666.0
offset_bottom = 208.0
theme_override_font_sizes/normal_font_size = 48
text = "Options"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="RichTextLabel" parent="." unique_id=1090623081]
layout_mode = 0
offset_left = 351.0
offset_top = 204.0
offset_right = 451.0
offset_bottom = 274.0
theme_override_font_sizes/normal_font_size = 30
text = "Music"
tab_size = 6
vertical_alignment = 1

[node name="SFX" type="RichTextLabel" parent="." unique_id=659995819]
layout_mode = 0
offset_left = 351.0
offset_top = 262.0
offset_right = 451.0
offset_bottom = 332.0
theme_override_font_sizes/normal_font_size = 30
text = "SFX"
tab_size = 6
vertical_alignment = 1

[node name="TextMusicVol" type="RichTextLabel" parent="." unique_id=352290110]
layout_mode = 0
offset_left = 763.0
offset_top = 204.0
offset_right = 863.0
offset_bottom = 274.0
theme_override_font_sizes/normal_font_size = 30
text = "Music"
tab_size = 6
vertical_alignment = 1

[node name="TextSFXVol" type="RichTextLabel" parent="." unique_id=1906072528]
layout_mode = 0
offset_left = 763.0
offset_top = 262.0
offset_right = 863.0
offset_bottom = 332.0
theme_override_font_sizes/normal_font_size = 30
text = "SFX"
tab_size = 6
vertical_alignment = 1

[node name="Back" type="RichTextLabel" parent="." unique_id=1451058505]
layout_mode = 0
offset_left = 490.0
offset_top = 462.0
offset_right = 684.0
offset_bottom = 532.0
theme_override_font_sizes/normal_font_size = 30
text = "Back"
tab_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="CursorMusic" type="Sprite2D" parent="." unique_id=1367613503]
position = Vector2(324, 243)
scale = Vector2(0.015, 0.015)
texture = ExtResource("3_4lldk")

[node name="CursorSFX" type="Sprite2D" parent="." unique_id=2045657251]
position = Vector2(324, 300)
scale = Vector2(0.015, 0.015)
texture = ExtResource("3_4lldk")

[node name="CursorBack" type="Sprite2D" parent="." unique_id=883601425]
position = Vector2(528, 500.00003)
scale = Vector2(0.015, 0.015)
texture = ExtResource("3_4lldk")

[node name="Timer" type="Timer" parent="." unique_id=835170644]
one_shot = true
